2008-05-21  Timothy Hatcher  <timothy@apple.com>

        Remove the rest of the debug code inside DEBUG_DEBUGGER_CALLBACKS
        since the parts the remain aren't useful.

        * page/JavaScriptDebugServer.cpp:
        (WebCore::JavaScriptDebugServer::sourceParsed):

2008-05-21  Beth Dakin  <bdakin@apple.com>

        Reviewed by Anders.

        Fix for <rdar://problem/5848161> REGRESSION (r31438?): Crash 
        beneath ResourceHandle::setDefersLoading while running fast/loader/
        simultaneous-reloads-assert.html (null CFURLConnection)

        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::ResourceHandle::setDefersLoading): Added simple null-
        check.

2008-05-21  Timothy Hatcher  <timothy@apple.com>

        Adds the Request and Response headers to the Resource view.

        <rdar://problem/5940782> REGRESSION: Resource Request and Response
        headers aren't shown (18451)

        Reviewed by Adam Roben.

        * English.lproj/localizedStrings.js: Added new strings.
        * css/view-source.css: Add comments to make sure a couple of
        style rules stay in sync with inspector.css.
        * page/inspector/Resource.js:
        (WebInspector.Resource.prototype.set url): Dispatch an event when
        this property changes.
        (WebInspector.Resource.prototype.set requestHeaders): Ditto.
        (WebInspector.Resource.prototype.set responseHeaders): Ditto.
        * page/inspector/ResourceView.js:
        (WebInspector.ResourceView): Add new elements for the headers
        and a headers TreeOutline. Add event listeners for resource
        property changes. Calls the three new refresh functions.
        (WebInspector.ResourceView.prototype.set headersVisible): Implemented.
        Toggles the headers-visible class name.
        (WebInspector.ResourceView.prototype._refreshURL): Update the URL
        tree element.
        (WebInspector.ResourceView.prototype._refreshRequestHeaders): Call _refreshHeaders.